--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <div id="mainDiv">
+        this is main div
+    </div> -->
+
+
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
 </body>
 <script src="06.js"></script>
 </html>
